--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 	<title>Kristin Koury, Personal Chef | Chicago, Illinois</title>
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" />
 	<meta name="description" content="Kristin Koury is a personal chef and food educator in Chicago, Illinois." />
-	<link rel="stylesheet" type="text/css" href="/css/style.css" />
-	<link rel="stylesheet" type="text/css" href="/css/special.css" />
 	<script type="text/javascript" src="//use.typekit.net/jen5ihn.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<style>
@@ -152,9 +150,9 @@
 		<p>I'm a personal chef and food educator in Chicago, Illinois.</p>
 		<p>I founded <a href="http://kitchenistas.net" title="Kitchenistas">Kitchenistas</a> in 2011.</p>
 		<p>Follow me on <a href="http://twitter.com/kitchenistas" title="Twitter">Twitter</a> and <a href="https://facebook.com/kitchenistascooking" title="Facebook">Facebook</a>.</p>
-		<p><a href="mailto:kristinkoury@gmail.com">Email me</a> for more information.</p>
+		<p><a href="mailto:kristinkoury@gmail.com" target="_blank">Email me</a> for more information.</p>
 	</article>
-	<img id="headshot" src="/images/kristin.jpg" alt="">
+	<img id="headshot" src="../images/kristin.jpg" alt="">
 </section>
 
 </div>
