--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 		<p>Follow me on <a href="http://twitter.com/kitchenistas" title="Twitter">Twitter</a> and <a href="https://facebook.com/kitchenistascooking" title="Facebook">Facebook</a>.</p>
 		<p><a href="mailto:kristinkoury@gmail.com" target="_blank">Email me</a> for more information.</p>
 	</article>
-	<img id="headshot" src="../images/kristin.jpg" alt="">
+	<img id="headshot" src="../images/kristin_koury.jpg" alt="">
 </section>
 
 </div>
