Removed kitchenistas link

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 	</header>
 	<article>
 		<p>I'm a personal chef and food educator in Chicago, Illinois.</p>
-		<p>I founded <a href="http://kitchenistas.net" title="Kitchenistas">Kitchenistas</a> in 2011.</p>
+		<p>I founded Kitchenistas in 2011.</p>
 		<p>Follow me on <a href="http://twitter.com/kitchenistas" title="Twitter">Twitter</a> and <a href="https://facebook.com/kitchenistascooking" title="Facebook">Facebook</a>.</p>
 		<p><a href="mailto:kristinkoury@gmail.com" target="_blank">Email me</a> for more information.</p>
 	</article>
