--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 	<article>
 		<p>I'm a personal chef and food educator in Chicago, Illinois.</p>
 		<p>I founded Kitchenistas in 2011.</p>
-		<p>Follow me on <a href="http://twitter.com/kitchenistas" title="Twitter">Twitter</a> and <a href="https://facebook.com/kitchenistascooking" title="Facebook">Facebook</a>.</p>
+		<p>Follow me on <a href="https://www.instagram.com/kristinkoury/" target="_blank" title="Instagram">Instagram.</p>
 		<p><a href="mailto:kristinkoury@gmail.com" target="_blank">Email me</a> for more information.</p>
 	</article>
 	<img id="headshot" src="../images/kristin_koury.jpg" alt="">
